// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders correctly 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root GuildSummaryCard-card css-1g0qwi7-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-content GuildSummaryCard-header css-1qbkelo-MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title GuildSummaryCard-title css-1qvr50w-MuiTypography-root"
        >
          string
        </span>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader GuildSummaryCard-title css-nrdprl-MuiTypography-root"
        >
          <div
            aria-label="string"
            class=""
            data-mui-internal-clone-element="true"
          >
            string
          </div>
        </span>
      </div>
    </div>
    <div
      class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
    >
      <strong>
        Guild Leads: 
      </strong>
      None Assigned
      <br />
      <strong>
        Guild Members: 
      </strong>
      None Assigned
    </div>
    <div
      class="MuiCardActions-root MuiCardActions-spacing css-dnrpxu-MuiCardActions-root"
    />
    <svg
      aria-hidden="true"
      aria-label="icon meaning"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1li5fkl-MuiSvgIcon-root"
      data-mui-internal-clone-element="true"
      data-testid="ConstructionIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="m13.7826 15.1719 2.1213-2.1213 5.9963 5.9962-2.1213 2.1213zM17.5 10c1.93 0 3.5-1.57 3.5-3.5 0-.58-.16-1.12-.41-1.6l-2.7 2.7-1.49-1.49 2.7-2.7c-.48-.25-1.02-.41-1.6-.41C15.57 3 14 4.57 14 6.5c0 .41.08.8.21 1.16l-1.85 1.85-1.78-1.78.71-.71-1.41-1.41L12 3.49c-1.17-1.17-3.07-1.17-4.24 0L4.22 7.03l1.41 1.41H2.81l-.71.71 3.54 3.54.71-.71V9.15l1.41 1.41.71-.71 1.78 1.78-7.41 7.41 2.12 2.12L16.34 9.79c.36.13.75.21 1.16.21"
      />
    </svg>
  </div>
</div>
`;

exports[`renders correctly for ADMIN 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root GuildSummaryCard-card css-1g0qwi7-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-content GuildSummaryCard-header css-1qbkelo-MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title GuildSummaryCard-title css-1qvr50w-MuiTypography-root"
        >
          string
        </span>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader GuildSummaryCard-title css-nrdprl-MuiTypography-root"
        >
          <div
            aria-label="string"
            class=""
            data-mui-internal-clone-element="true"
          >
            string
          </div>
        </span>
      </div>
    </div>
    <div
      class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
    >
      <strong>
        Guild Leads: 
      </strong>
      None Assigned
      <br />
      <strong>
        Guild Members: 
      </strong>
      None Assigned
    </div>
    <div
      class="MuiCardActions-root MuiCardActions-spacing css-dnrpxu-MuiCardActions-root"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-1e6y48t-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Edit Guild
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
    <svg
      aria-hidden="true"
      aria-label="icon meaning"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1li5fkl-MuiSvgIcon-root"
      data-mui-internal-clone-element="true"
      data-testid="ConstructionIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="m13.7826 15.1719 2.1213-2.1213 5.9963 5.9962-2.1213 2.1213zM17.5 10c1.93 0 3.5-1.57 3.5-3.5 0-.58-.16-1.12-.41-1.6l-2.7 2.7-1.49-1.49 2.7-2.7c-.48-.25-1.02-.41-1.6-.41C15.57 3 14 4.57 14 6.5c0 .41.08.8.21 1.16l-1.85 1.85-1.78-1.78.71-.71-1.41-1.41L12 3.49c-1.17-1.17-3.07-1.17-4.24 0L4.22 7.03l1.41 1.41H2.81l-.71.71 3.54 3.54.71-.71V9.15l1.41 1.41.71-.71 1.78 1.78-7.41 7.41 2.12 2.12L16.34 9.79c.36.13.75.21 1.16.21"
      />
    </svg>
  </div>
</div>
`;

exports[`renders correctly for guild lead 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root GuildSummaryCard-card css-1g0qwi7-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-content GuildSummaryCard-header css-1qbkelo-MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title GuildSummaryCard-title css-1qvr50w-MuiTypography-root"
        >
          stuff
        </span>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader GuildSummaryCard-title css-nrdprl-MuiTypography-root"
        >
          <div
            aria-label=""
            class=""
            data-mui-internal-clone-element="true"
          />
        </span>
      </div>
    </div>
    <div
      class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
    >
      <strong>
        Guild Leads: 
      </strong>
      <a
        href="/profile/3fa4-5717-4562-b3fc-2c963f66afa9"
        style="text-decoration: none;"
      >
        testname
      </a>
      <br />
      <strong>
        Guild Members: 
      </strong>
    </div>
    <div
      class="MuiCardActions-root MuiCardActions-spacing css-dnrpxu-MuiCardActions-root"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-1e6y48t-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Edit Guild
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
    <svg
      aria-hidden="true"
      aria-label="icon meaning"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1li5fkl-MuiSvgIcon-root"
      data-mui-internal-clone-element="true"
      data-testid="ConstructionIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="m13.7826 15.1719 2.1213-2.1213 5.9963 5.9962-2.1213 2.1213zM17.5 10c1.93 0 3.5-1.57 3.5-3.5 0-.58-.16-1.12-.41-1.6l-2.7 2.7-1.49-1.49 2.7-2.7c-.48-.25-1.02-.41-1.6-.41C15.57 3 14 4.57 14 6.5c0 .41.08.8.21 1.16l-1.85 1.85-1.78-1.78.71-.71-1.41-1.41L12 3.49c-1.17-1.17-3.07-1.17-4.24 0L4.22 7.03l1.41 1.41H2.81l-.71.71 3.54 3.54.71-.71V9.15l1.41 1.41.71-.71 1.78 1.78-7.41 7.41 2.12 2.12L16.34 9.79c.36.13.75.21 1.16.21"
      />
    </svg>
  </div>
</div>
`;
